# main.go
@@ -1,3 +1,4 @@
+//go:generate goversioninfo
 package main
 
 import (
@@ -13,13 +14,14 @@ import (
 
 	_ "sp_backend/docs"
 
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 // @title           sp_backend API
-// @version         1.1
+// @version         1.2
 // @description     社区平台 API 文档，包含用户、帖子、委托等功能
 // @termsOfService  http://swagger.io/terms/
 
@@ -66,6 +68,10 @@ func main() {
 
 	server := gin.Default()
 
+	config := cors.DefaultConfig()
+	config.AllowAllOrigins = true
+
+	server.Use(cors.New(config))
 	frontend.WebInit(server)
 
 	server.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
@@ -73,6 +79,8 @@ func main() {
 	userRepo := repository.NewUserRepository(db)
 	authHandler := handlers.NewAuthHandler(userRepo, jwtConfig)
 	userHandler := handlers.NewUserHandler(userRepo, jwtConfig)
+	avatarHandler := handlers.NewAvatarHandler(userRepo)
+
 	appRouter := server.Group("/app")
 
 	authRouter := appRouter.Group("/auth")
@@ -85,10 +93,19 @@ func main() {
 	protectedRouter := appRouter.Group("")
 	protectedRouter.Use(middleware.OptionalAuth(jwtConfig))
 
+	{
+		protectedRouter.GET("/avatar/:filename", avatarHandler.AvatarsHandler) // @Tags 头像
+	}
+
 	userRouter := protectedRouter.Group("/user")
 	{
 		userRouter.GET("/get-info", userHandler.GetInfo) // @Tags 用户
 		userRouter.POST("/edit", userHandler.Edit)       // @Tags 用户
+	}
+
+	uploadRouter := protectedRouter.Group("/uploads")
+	{
+		uploadRouter.POST("/avatar", avatarHandler.UploadAvatar) // @Tags 头像
 	}
 
 	server.Run(":8080")
